package com.agency.report;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ViewReportStatisticApplication {

	public static void main(String[] args) {
		SpringApplication.run(ViewReportStatisticApplication.class, args);
	}

}
